# edabo-rs

./: .travis.yml  Cargo.toml  README.md
src/: commands.rs  empd.rs  lib.rs  main.rs  serde_types.in.rs  types.rs
tests/: playlist.rs  track.rs
tests/data/: playlist.edabo
travis/: travis.sh
