[package]
name = "edabo"
version = "0.1.0"
authors = ["Wieland Hoffmann <themineo@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
clap = "2.19"
chrono = { version = "0.2", features = ["serde"] }
linked-hash-map = { version = "0.3.0", features = ["serde_impl"] }
mpd = { git = "https://github.com/kstep/rust-mpd.git" }
serde = "0.8"
serde_json = "0.8"
uuid = { version = "0.3", features = ["serde", "v4"] }
xdg = "2.0.0"

[[bin]]
name = "edabo"
doc = false
